--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,5 @@
-body,
-button,
-input {
-  font-size: 2rem;
+body {
+  font-size: 16px;
 }
 
 button,
@@ -10,7 +8,7 @@ input {
 }
 
 /* Adjustments for smaller screens */
-@media screen and (min-width: 390px) {
+@media screen and (max-width: 1000px) {
   input,
   button,
   select {
