change escape character to stop class

--- a/css/styles.css
+++ b/css/styles.css
@@ -61,3 +61,8 @@ button#play {
   background: rgb(32, 155, 49);
   color: rgb(255, 255, 255)
 }
+
+.stop {
+  background: rgb(194, 19, 19);
+  color: rgb(255, 255, 255)
+}
