--- a/css/styles.css
+++ b/css/styles.css
@@ -57,15 +57,17 @@ button#play {
 .diapason {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(80px, 1fr)); /* Adjust min and max width for notes */
-  gap: 5px; /* Adjust gap between grid items */
-  padding: 5px;
-  border: 1px solid #ccc; /* Add border to diapason */
+  gap: 1rem;
+  padding: 1rem;
+  border: 1px solid #ccc;
   background: #000;
+  border-radius: 1rem;
 }
 
 .note {
   background: #fff;
   border: 1px solid #ccc;
+  border-radius: .5rem;
   text-align: center;
   display: flex;
   flex-direction: column;
