--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,17 @@ body {
   font-size: 16px;
 }
 
+#mainGrid {
+  display: grid;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+#systemTable {
+  grid-column: 2;
+  width: 1000px;
+}
+
 form {
   display: grid;
   width: 400px;
@@ -15,10 +26,6 @@ form {
 
 label {
   grid-column: 1;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  padding-right: 10px; /* Adjust padding as needed */
 }
 
 input, select {
@@ -33,14 +40,6 @@ button {
 
 fieldset {padding: 1rem; margin: 0;}
 
-/* Adjustments for smaller screens */
-@media screen and (max-width: 1000px) {
-  input,
-  select {
-    box-sizing: border-box;
-  }
-}
-
 #systemTable,
 button#play {
   /* Disable text selection */
@@ -51,7 +50,6 @@ button#play {
 .grid-container {
   display: grid;
   gap: 5px;
-  padding: 10px;
 }
 
 .diapason {
@@ -62,6 +60,7 @@ button#play {
   border: 1px solid #ccc;
   background: #000;
   border-radius: 1rem;
+  height: 300px;
 }
 
 .note {
@@ -69,8 +68,9 @@ button#play {
   border: 1px solid #ccc;
   border-radius: .5rem;
   text-align: center;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  align-content: stretch;
+  align-items: center;
 }
 
 .note-name {
@@ -90,4 +90,12 @@ button#play {
 .stop {
   background: rgb(194, 19, 19);
   color: rgb(255, 255, 255)
+}
+
+/* Adjustments for smaller screens */
+@media screen and (max-width: 1000px) {
+  input,
+  select {
+    box-sizing: border-box;
+  }
 }
