--- a/css/styles.css
+++ b/css/styles.css
@@ -55,8 +55,8 @@ button#play {
 .diapason {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(80px, 1fr)); /* Adjust min and max width for notes */
-  gap: 1rem;
-  padding: 1rem;
+  gap: .5rem;
+  padding: .5rem;
   border: 1px solid #ccc;
   background: #000;
   border-radius: 1rem;
