--- a/css/styles.css
+++ b/css/styles.css
@@ -8,19 +8,12 @@ body {
   gap: 1rem;
 }
 
-#systemTable {
-  grid-column: 2;
-  width: 1000px;
+#systemConfigForm {
+  grid-column: 1;
 }
 
-form {
+.formGroup {
   display: grid;
-  width: 400px;
-}
-
-.form-container {
-  display: grid;
-  grid-template-columns: max-content auto;
   gap: 10px;
 }
 
@@ -47,6 +40,11 @@ button#play {
   -webkit-user-select: none;
 }
 
+#systemTable {
+  grid-column: 2;
+  width: 1100px;
+}
+
 .grid-container {
   display: grid;
   gap: 5px;
@@ -60,7 +58,6 @@ button#play {
   border: 1px solid #ccc;
   background: #000;
   border-radius: 1rem;
-  height: 300px;
 }
 
 .note {
@@ -73,8 +70,10 @@ button#play {
   align-items: center;
 }
 
-.note-name {
+.key-name {
+  font-size: 5rem;
   font-weight: bold;
+  text-transform: capitalize;
 }
 
 .note-frequency {
